feat: implement ecommerce core features, configure gitignore to exclude non-screenshot files